--- a/Views/Studs/CheckEyes.cshtml
+++ b/Views/Studs/CheckEyes.cshtml
@@ -18,7 +18,6 @@
     </p>
     <div>
         <div class="control"><button id="startAndStop">Start</button></div>
-<textarea class="code" rows="29" cols="100" id="codeEditor" spellcheck="false"></textarea>
     </div>
     <p class="err" id="errorMessage"></p>
     <div>
@@ -82,19 +81,22 @@
             startRecognation();
         }
         function startRecognation() {
-           
+
             let video = document.getElementById('videoInput');
             let src = new cv.Mat(video.height, video.width, cv.CV_8UC4);
             let dst = new cv.Mat(video.height, video.width, cv.CV_8UC4);
             let gray = new cv.Mat();
             let cap = new cv.VideoCapture(video);
-            let eyes = new cv.RectVector();
             let faces = new cv.RectVector();
+            let eyes = new cv.RectVector();
             let classifier = new cv.CascadeClassifier();
             let eyeCascade = new cv.CascadeClassifier();
             // load pre-trained classifiers
             classifier.load('haarcascade_frontalface_default.xml');
             eyeCascade.load('haarcascade_eye.xml');
+            let EyeEventX = new Array();
+            let EyeEventY = new Array();
+            let current = 0;
 
             const FPS = 30;
             function processVideo() {
@@ -106,35 +108,46 @@
                         gray.delete();
                         faces.delete();
                         classifier.delete();
-                        eyeCascade.delete();
-                        src.delete();
-                        faceCascade.delete();
-                        eyes.delete();
                         return;
                     }
                     let begin = Date.now();
+
                     // start processing.
                     cap.read(src);
                     src.copyTo(dst);
                     cv.cvtColor(dst, gray, cv.COLOR_RGBA2GRAY, 0);
                     // detect faces.
                     classifier.detectMultiScale(gray, faces, 1.1, 3, 0);
-
                     // draw faces.
                     for (let i = 0; i < faces.size(); ++i) {
+                        let face = faces.get(i);
                         let roiGray = gray.roi(faces.get(i));
                         let roiSrc = src.roi(faces.get(i));
-                        let point1 = new cv.Point(faces.get(i).x, faces.get(i).y);
-                        let point2 = new cv.Point(faces.get(i).x + faces.get(i).width,
-                            faces.get(i).y + faces.get(i).height);
-                        cv.rectangle(src, point1, point2, [255, 0, 0, 255]);
-                        // detect eyes in face ROI
+                        let point1 = new cv.Point(face.x, face.y);
+                        let point2 = new cv.Point(face.x + face.width, face.y + face.height);
+                        cv.rectangle(dst, point1, point2, [255, 0, 0, 255]);
                         eyeCascade.detectMultiScale(roiGray, eyes);
                         for (let j = 0; j < eyes.size(); ++j) {
-                            let point1 = new cv.Point(eyes.get(j).x, eyes.get(j).y);
-                            let point2 = new cv.Point(eyes.get(j).x + eyes.get(j).width,
-                                eyes.get(j).y + eyes.get(j).height);
-                            cv.rectangle(roiSrc, point1, point2, [0, 0, 255, 255]);
+                            let point1Y = new cv.Point(point1.x + eyes.get(j).x, point1.y + eyes.get(j).y);
+                            let point2Y = new cv.Point(point1.x + eyes.get(j).x + eyes.get(j).width,
+                                point1.y + eyes.get(j).y + eyes.get(j).height);
+                            cv.rectangle(dst, point1Y, point2Y, [0, 0, 255, 255]);
+                            //cv.circle(dst, (point1.x + eyes.get(j).x + (eyes.get(j).width / 2), point1.y + eyes.get(j).y + (eyes.get(j).height / 2)), 10, (0, 0, 255), -1);
+                            let center = new cv.Point(point1.x + eyes.get(j).x + (eyes.get(j).width / 2), point1.y + eyes.get(j).y + (eyes.get(j).height / 2));
+                            let circleColor = new cv.Scalar(255, 0, 0);
+                            cv.circle(dst, center, 1, circleColor);
+
+                            if (j == 0) {
+                                EyeEventX.push(center.x);
+                                EyeEventY.push(center.y);
+                                current++;
+                                if (current == 100) {
+                                    console.log("X:" + standardDeviation(EyeEventX));
+                                    console.log("Y:" +standardDeviation(EyeEventY));
+                                    current = 0;
+
+                                }
+                            }
                         }
                     }
                     cv.imshow('canvasOutput', dst);
@@ -149,6 +162,29 @@
             // schedule the first one.
             setTimeout(processVideo, 0);
         }
+        function standardDeviation(values) {
+            var avg = average(values);
+
+            var squareDiffs = values.map(function (value) {
+                var diff = value - avg;
+                var sqrDiff = diff * diff;
+                return sqrDiff;
+            });
+
+            var avgSquareDiff = average(squareDiffs);
+
+            var stdDev = Math.sqrt(avgSquareDiff);
+            return stdDev;
+        }
+
+        function average(data) {
+            var sum = data.reduce(function (sum, value) {
+                return sum + value;
+            }, 0);
+
+            var avg = sum / data.length;
+            return avg;
+        }
         function onVideoStopped() {
             streaming = false;
             canvasContext.clearRect(0, 0, canvasOutput.width, canvasOutput.height);
@@ -161,7 +197,7 @@
                 startAndStop.removeAttribute('disabled');
             });
             let faceCascadeEye = '../haarcascade_eye.xml';
-           
+
             utils.createFileFromUrl(faceCascadeEye, faceCascadeEye, () => {
                 startAndStop.removeAttribute('disabled');
             });
