--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+    <div class="container-fluid" style="background-color:white">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
 
+        <div class="container">
+            <img src="~/img/photo_2020-05-04_23-54-59.jpg" style="width:100%" alt="" />
+        </div>
+    </div>
 
