--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -95,7 +95,8 @@ body {
 .videoFrame {
     height: 380px;
     width: 100%;
-    background-image:url('../img/image 2.png');
+    background-image: url('../img/image 2.png');
+    position: relative;
 }
 main {
     background-color: #F8F8F8;
@@ -140,3 +141,59 @@ main {
     height: 44px;
     margin-right:5px;
 }
+.rainbowData {
+    width: 100%;
+    background: linear-gradient(270deg, #F2994A 0%, rgba(242, 153, 74, 0) 100%), #27AE60;
+    height: 20px;
+}
+.feelingGroup {
+    padding: 17px;
+    margin-bottom:20px;
+}
+.feelingGroup .btn {
+    border-radius: 25px;
+    height: 22px;
+    font-size: 10px;
+    width: 22px;
+    padding: 0;
+}
+.feelingGroup img
+{
+    height:12px;
+}
+.videoProf {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+    align-items: self-end;
+    height: 90px;
+    width: 124px;
+}
+.videoProf video
+{
+    width:30px;
+}
+.message {
+    list-style-type: none;
+    border-radius: 20px;
+    margin-top: 15px;
+    width: 284px;
+}
+
+.message p {
+    margin: 0;
+}
+    .message:nth-child(2n+1) {
+        text-align:left;
+    }
+    .message:nth-child(2n) {
+        text-align: right;
+    }
+    .message p:first-child {
+        padding-left: 22px;
+        color: gray;
+    }
+    .message p:nth-child(2) {
+        padding-left: 43px;
+    }
